--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="css/bootstrap.min.css">
 </head>
 <body>
+    <h1>General Pico</h1>
     <script src="js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
