--- a/independiente.html
+++ b/independiente.html
@@ -11,7 +11,7 @@
     &nbsp;&nbsp;&nbsp;&nbsp;<button class="btn btn-success" type="button">Btn primario</button>
     &nbsp;&nbsp;&nbsp;<button class="btn btn-outline-secondary" type="button" style="border-color: green;">BtnSecundario</button>
 
-
+    <h1>Hola</h1>
 
 
     <script src="js/bootstrap.bundle.min.js"></script>
