--- a/index.html
+++ b/index.html
@@ -78,8 +78,63 @@
             </div>
         </div>
     </div>
+        <br><br>
+    <!-- Carrusel de Noticias -->
+<div class="container my-5">
+    <h2 class="text-center fw-bold mb-4">Noticias de General Pico y sus Clubes</h2>
+    <div id="carouselNoticias" class="carousel slide" data-bs-ride="carousel" data-bs-interval="6000">
+        
+        <div class="carousel-inner">
 
+            <!-- Noticia 1 -->
+            <div class="carousel-item active">
+                <img src="recursos/noticia1.jpeg" class="d-block w-100 rounded" alt="noticia pico futbol">
+                <div class="carousel-caption d-none d-md-block bg-dark bg-opacity-50 rounded p-3">
+                    <h5>Pico Fútbol inaugura nuevas canchas</h5>
+                    <p>La institución presentó sus nuevas canchas de futbol 5, un espacio para venir a jugar con tus amigos.</p>
+                    <a href="https://picofc.com" target="_blank" class="btn btn-sm btn-light">Ver más</a>
+                </div>
+            </div>
 
+            <!-- Noticia 2 -->
+            <div class="carousel-item">
+                <img src="recursos/noticia2.jpg" class="d-block w-100 rounded" alt="noticia independiente">
+                <div class="carousel-caption d-none d-md-block bg-dark bg-opacity-50 rounded p-3">
+                    <h5>Independiente lidera en el torneo regional</h5>
+                    <p>Más de 20 equipos entraron en la liga este año!.</p>
+                    <a href="https://www.ligapampeana.com.ar/" target="_blank" class="btn btn-sm btn-light">Ver más</a>
+                </div>
+            </div>
+
+            <!-- Noticia 3 -->
+            <div class="carousel-item">
+                <img src="recursos/noticia3.jpg" class="d-block w-100 rounded" alt="noticia ciudad">
+                <div class="carousel-caption d-none d-md-block bg-dark bg-opacity-50 rounded p-3">
+                    <h5>General Pico celebra el deporte</h5>
+                    <p>El municipio presentó nuevas actividades recreativas para jóvenes y adultos.</p>
+                    <a href="https://www.generalpico.gov.ar/" target="_blank" class="btn btn-sm btn-light">Ver más</a>
+                </div>
+            </div>
+        </div>
+
+        <!-- Controles -->
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselNoticias" data-bs-slide="prev">
+            <span class="carousel-control-prev-icon"></span>
+            <span class="visually-hidden">Anterior</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselNoticias" data-bs-slide="next">
+            <span class="carousel-control-next-icon"></span>
+            <span class="visually-hidden">Siguiente</span>
+        </button>
+
+        <!-- Indicadores -->
+        <div class="carousel-indicators">
+            <button type="button" data-bs-target="#carouselNoticias" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Noticia 1"></button>
+            <button type="button" data-bs-target="#carouselNoticias" data-bs-slide-to="1" aria-label="Noticia 2"></button>
+            <button type="button" data-bs-target="#carouselNoticias" data-bs-slide-to="2" aria-label="Noticia 3"></button>
+        </div>
+    </div>
+</div>
 
         <br><br><br>
 
