--- a/pfc.html
+++ b/pfc.html
@@ -81,7 +81,7 @@
 
                     <div class="sport-item">
                         <div class="image-container">
-                            <img src="recursos/Natacion.jpg"Natación">
+                            <img src="recursos/Natacion.jpg" Natación">
                         </div>
                         <p class="sport-caption">Natación</p>
                     </div>
@@ -101,16 +101,15 @@
                     </div>
                 </div>
             </div>
-        </div>
-
-        <div id="Ubicación" class="section">
+            <div id="Ubicación" class="section">
             <h2>Ubicación</h2>
             <div class="text-container">
-                <p>Aquí tienes algunos Ubicación de código:</p>
-                <p><strong>HTML:</strong> Estructura básica de una página web</p>
-                <p><strong>CSS:</strong> Estilos modernos con Flexbox y Grid</p>
-                <p><strong>JavaScript:</strong> Funciones interactivas para tu sitio</p>
-                <p><strong>React:</strong> Componentes reutilizables para interfaces modernas</p>
+                <p>El 1 de abril de 1919, un grupo de jóvenes entusiastas del deporte y con un fuerte sentido de
+                    comunidad fundó Pico Football Club en la ciudad de General Pico, La Pampa. La institución nació
+                    con el propósito de fomentar la práctica del fútbol y generar un espacio de encuentro y
+                    crecimiento para la comunidad. Entre sus impulsores se destacaron Mario Rudoni, Eduardo Rolero,
+                    Gabriel Pedrerol y otros visionarios que sentaron las bases de lo que con el tiempo se
+                    convertiría en una institución emblema de la región.</p>
             </div>
         </div>
 
@@ -124,6 +123,8 @@
                 <p>¡Felicidades! 🎉 Continúa practicando y explorando nuevas tecnologías.</p>
             </div>
         </div>
+        </div>
+
     </div>
     </div>
 
