--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                         <div class="card-body">
                             <h5 class="card-title">Pico Futbol Club</h5>
                             <p class="card-text">Institución dedicada al fomento del deporte y la vida saludable, ofreciendo espacios de entrenamiento y competencias para todas las edades</p>
-                            <a href="pfc.html" target="_blank" class="btn btn-success">Ir a Pico Futbol</a>
+                            <a href="pfc.html" class="btn btn-success">Ir a Pico Futbol</a>
                         </div>
                     </div>
                 </div>
@@ -47,7 +47,7 @@
                     <div class="card-body">
                         <h5 class="card-title">Costa Brava</h5>
                         <p class="card-text">Entidad deportiva que impulsa la práctica de diversas actividades físicas, generando comunidad y desarrollo integral en cada socio y familias</p>
-                        <a href="costa.html" target="_blank" class="btn btn-success">Ir a Costa Brava</a>
+                        <a href="costa.html" class="btn btn-success">Ir a Costa Brava</a>
                     </div>
                 </div>
             </div>
@@ -72,7 +72,7 @@
                     <div class="card-body">
                         <h5 class="card-title">Ferro Carril Oeste</h5>
                         <p class="card-text">Centro de deportes con infraestructura moderna, donde se combinan recreación, formación y competencia en un ambiente de respeto y compañerismo</p>
-                        <a href="ferro.html" target="_blank" class="btn btn-success">Ir a Ferro</a>
+                        <a href="ferro.html" class="btn btn-success">Ir a Ferro</a>
                     </div>
                 </div>
             </div>
