--- a/costa.html
+++ b/costa.html
@@ -4,9 +4,175 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="css/estiloClubes.css">
     <link rel="stylesheet" href="css/bootstrap.min.css">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </head>
-<body>
+<body class="fondo-costa">
+    <header>
+        <a href="index.html"><img src="recursos/LogoGP.png" alt="LogoGralPico" class="logo"></a>
+    </header>
+    <div class="container">
+        <!-- Tabla de Contenidos -->
+        <div class="toc-sidebar">
+            <div class="toc-item">
+                <a href="#Introducción" class="active" data-section="Introducción">Introducción</a>
+            </div>
+
+            <div class="toc-item">
+                <a href="#Historia" data-section="Historia">Historia</a>
+            </div>
+
+            <div class="toc-item">
+                <a href="#Disciplinas" data-section="Disciplinas">Disciplinas Deportivas</a>
+            </div>
+
+            <div class="toc-item">
+                <a href="#Ubicación" data-section="Ubicación">Ubicación</a>
+            </div>
+
+            <div class="toc-item">
+                <a href="#Contacto" data-section="Contacto">Contacto</a>
+            </div>
+        </div>
+
+        <div class="content">
+            <div id="Introducción" class="section active">
+                <h2>Presentación</h2>
+                <div class="text-container">
+                    <p>El Club Atlético Costa Brava es una institución deportiva de la ciudad de 
+                        General Pico, provincia de La Pampa, fundada el 21 de agosto de 1932.​ 
+                        Actualmente participa en el Torneo Federal A, la tercera categoría del fútbol argentino
+                        ​para los equipos de los clubes indirectamente afiliados a la AFA.</p>
+                </div>
+                <div class="section-img">
+                    <img src="recursos/costa-brava.jpeg" class="img">
+                </div>
+            </div>
+
+            <div id="Historia" class="section">
+                <h2>Historia</h2>
+                <div class="text-container">
+                    <p>Fue fundado el 21 de agosto de 1932 por un 
+                        grupo de vecinos del entonces llamado barrio 
+                        de "las ranas" (hoy Barrio Este), ubicado "detrás de 
+                        las vías" como se los identificaba a los pueblos creados 
+                        alrededor del ferrocarril. Su primera comisión directiva 
+                        estuvo conformada por Bautista Matos como presidente, 
+                        Plácido Luis como vicepresidente, Diodoro Guajardo como 
+                        secretario, Manuel Granja como prosecretario, Práxedes 
+                        Alonso como tesorero, Diego Mainz como protesorero, 
+                        Ángel Valentín Pérez como secretario de actas; junto 
+                        a los vocales Miguel Moreno, Julio Speranza, Emilio Somovilla, 
+                        Manuel Bermúdez y Constantino Entiz.</p>
+                </div>
+            </div>
+
+            <div id="Disciplinas" class="section">
+                <h2>Disciplinas Deportivas</h2>
+                <div class="sports-gallery">
+                    <div class="sport-item">
+                        <div class="image-container">
+                            <img src="recursos/Basquet.webp" alt="Básquet">
+                        </div>
+                        <p class="sport-caption">Básquet</p>
+                    </div>
+
+                    <div class="sport-item">
+                        <div class="image-container">
+                            <img src="recursos/Futbol.jpg" alt="Fútbol">
+                        </div>
+                        <p class="sport-caption">Fútbol</p>
+                    </div>
+
+                    <div class="sport-item">
+                        <div class="image-container">
+                            <img src="recursos/Natacion.jpg" Natación">
+                        </div>
+                        <p class="sport-caption">Natación</p>
+                    </div>
+
+                    <div class="sport-item">
+                        <div class="image-container">
+                            <img src="recursos/Voley.webp" alt="Vóley">
+                        </div>
+                        <p class="sport-caption">Vóley</p>
+                    </div>
+
+                    <div class="sport-item">
+                        <div class="image-container">
+                            <img src="recursos/Hockey.jpg" alt="Hockey">
+                        </div>
+                        <p class="sport-caption">Hockey</p>
+                    </div>
+                </div>
+            </div>
+            <div id="Ubicación" class="section">
+            <h2>Ubicación</h2>
+            <div class="text-container">
+                <p>Calle 23 número 1051, Gral. Pico, La Pampa.</p>
+            </div>
+        </div>
+
+        <div id="Contacto" class="section">
+            <h2>✅ Contacto</h2>
+            <div class="text-container">
+                <p>Teléfono: 02302 42-2744</p>
+                <a href="https://www.instagram.com/clubatleticocostabrava/" target="_blank">Instagram de Costa Brava.</a>
+            </div>
+        </div>
+        </div>
+
+    </div>
+    </div>
+    
+
+     <script>
+        document.addEventListener('DOMContentLoaded', function () {
+            // Obtener todos los enlaces y secciones
+            const links = document.querySelectorAll('.toc-item a');
+            const sections = document.querySelectorAll('.section');
+
+            // Función para cambiar de sección
+            function showSection(sectionId) {
+                // Ocultar todas las secciones
+                sections.forEach(section => {
+                    section.classList.remove('active');
+                });
+
+                // Mostrar la sección seleccionada
+                document.getElementById(sectionId).classList.add('active');
+
+                // Actualizar enlace activo
+                links.forEach(link => {
+                    link.classList.remove('active');
+                    if (link.getAttribute('data-section') === sectionId) {
+                        link.classList.add('active');
+                    }
+                });
+            }
+
+            // Agregar event listeners a los enlaces
+            links.forEach(link => {
+                link.addEventListener('click', function (e) {
+                    e.preventDefault();
+                    const sectionId = this.getAttribute('data-section');
+                    showSection(sectionId);
+                });
+            });
+
+            // Efecto adicional al pasar el cursor
+            document.querySelectorAll('.toc-item').forEach(item => {
+                item.addEventListener('mouseenter', function () {
+                    this.style.transform = 'scale(1.02)';
+                });
+
+                item.addEventListener('mouseleave', function () {
+                    this.style.transform = 'scale(1)';
+                });
+            });
+        });
+    </script>
     
 
 
