Agregué script.js genérico y borré archivo basura

--- a/atletico.html
+++ b/atletico.html
@@ -56,7 +56,7 @@
         </div>
     </footer>
 
-
+    <script src="js/script.js"></script>
     <script src="js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
