--- a/costa.html
+++ b/costa.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Costa</title>
     <link rel="stylesheet" href="css/estiloClubes.css">
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
@@ -127,55 +127,7 @@
     </div>
     
 
-     <script>
-        document.addEventListener('DOMContentLoaded', function () {
-            // Obtener todos los enlaces y secciones
-            const links = document.querySelectorAll('.toc-item a');
-            const sections = document.querySelectorAll('.section');
-
-            // Función para cambiar de sección
-            function showSection(sectionId) {
-                // Ocultar todas las secciones
-                sections.forEach(section => {
-                    section.classList.remove('active');
-                });
-
-                // Mostrar la sección seleccionada
-                document.getElementById(sectionId).classList.add('active');
-
-                // Actualizar enlace activo
-                links.forEach(link => {
-                    link.classList.remove('active');
-                    if (link.getAttribute('data-section') === sectionId) {
-                        link.classList.add('active');
-                    }
-                });
-            }
-
-            // Agregar event listeners a los enlaces
-            links.forEach(link => {
-                link.addEventListener('click', function (e) {
-                    e.preventDefault();
-                    const sectionId = this.getAttribute('data-section');
-                    showSection(sectionId);
-                });
-            });
-
-            // Efecto adicional al pasar el cursor
-            document.querySelectorAll('.toc-item').forEach(item => {
-                item.addEventListener('mouseenter', function () {
-                    this.style.transform = 'scale(1.02)';
-                });
-
-                item.addEventListener('mouseleave', function () {
-                    this.style.transform = 'scale(1)';
-                });
-            });
-        });
-    </script>
-    
-
-
+    <script src="js/script.js"></script>
     <script src="js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
