--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                     <div class="card-body">
                         <h5 class="card-title">Club Sportivo Independiente</h5>
                         <p class="card-text">Club deportivo que reúne a atletas y vecinos en torno a distintas disciplinas, promoviendo valores de trabajo en equipo</p>
-                        <a href="independiente.html" target="_blank" class="btn btn-success">Ir a Independiente</a>
+                        <a href="independiente.html" class="btn btn-success">Ir a Independiente</a>
                     </div>
                 </div>
             </div>
