--- a/independiente.html
+++ b/independiente.html
@@ -3,17 +3,126 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Independiente</title>
+    <link rel="stylesheet" href="css/estiloClubes.css">
     <link rel="stylesheet" href="css/bootstrap.min.css">
-</head>
-<body>
-    <br><br><br>
-    &nbsp;&nbsp;&nbsp;&nbsp;<button class="btn btn-success" type="button">Btn primario</button>
-    &nbsp;&nbsp;&nbsp;<button class="btn btn-outline-secondary" type="button" style="border-color: green;">BtnSecundario</button>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+<body class="fondo-independiente">
+    <header>
+        <a href="index.html"><img src="recursos/LogoGP.png" alt="LogoGralPico" class="logo"></a>
+    </header>
+    <div class="container">
+        <!-- Tabla de Contenidos -->
+        <div class="toc-sidebar">
+            <div class="toc-item">
+                <a href="#Introducción" class="active" data-section="Introducción">Introducción</a>
+            </div>
 
+            <div class="toc-item">
+                <a href="#Historia" data-section="Historia">Historia</a>
+            </div>
 
+            <div class="toc-item">
+                <a href="#Disciplinas" data-section="Disciplinas">Disciplinas Deportivas</a>
+            </div>
 
+            <div class="toc-item">
+                <a href="#Ubicación" data-section="Ubicación">Ubicación</a>
+            </div>
 
+            <div class="toc-item">
+                <a href="#Contacto" data-section="Contacto">Contacto</a>
+            </div>
+        </div>
+
+        <div class="content">
+            <div id="Introducción" class="section active">
+                <h2>Presentación</h2>
+                <div class="text-container">
+                    <p>Club Sportivo Independiente, también conocido como 
+                        Independiente de General Pico, es un club deportivo 
+                        ubicado en General Pico, La Pampa. De los varios deportes 
+                        que se practican en el club, Independiente fue más conocido 
+                        por el equipo de básquetbol, que ganó un título de la Liga 
+                        Nacional de Básquet y fue 3 veces subcampeón, además de campeón Sudamericano.​</p>
+                </div>
+                <div class="section-img">
+                    <img src="recursos/Club-Sportivo-Independiente.jpeg" class="img">
+                </div>
+            </div>
+
+            <div id="Historia" class="section">
+                <h2>Historia</h2>
+                <div class="text-container">
+                    <p>Independiente (conocido como El Rojo, al igual que 
+                        su homónimo de la ciudad bonaerense de Avellaneda) 
+                        fue fundado el 20 de agosto de 1920 por Don Roberto 
+                        Petit de Meurville, acuñando el lema "Mens sana in 
+                        corpore sano" que continúa siendo el eje inspirador 
+                        del club hasta la actualidad, en el cual se desarrollan 
+                        distintas disciplinas como fútbol, balonmano, tenis, golf, entre otras.[</p>
+                </div>
+            </div>
+
+            <div id="Disciplinas" class="section">
+                <h2>Disciplinas Deportivas</h2>
+                <div class="sports-gallery">
+                    <div class="sport-item">
+                        <div class="image-container">
+                            <img src="recursos/Basquet.webp" alt="Básquet">
+                        </div>
+                        <p class="sport-caption">Básquet</p>
+                    </div>
+
+                    <div class="sport-item">
+                        <div class="image-container">
+                            <img src="recursos/Futbol.jpg" alt="Fútbol">
+                        </div>
+                        <p class="sport-caption">Fútbol</p>
+                    </div>
+
+                    <div class="sport-item">
+                        <div class="image-container">
+                            <img src="recursos/Natacion.jpg" Natación">
+                        </div>
+                        <p class="sport-caption">Natación</p>
+                    </div>
+
+                    <div class="sport-item">
+                        <div class="image-container">
+                            <img src="recursos/Voley.webp" alt="Vóley">
+                        </div>
+                        <p class="sport-caption">Vóley</p>
+                    </div>
+
+                    <div class="sport-item">
+                        <div class="image-container">
+                            <img src="recursos/Hockey.jpg" alt="Hockey">
+                        </div>
+                        <p class="sport-caption">Hockey</p>
+                    </div>
+                </div>
+            </div>
+            <div id="Ubicación" class="section">
+            <h2>Ubicación</h2>
+            <div class="text-container">
+                <p>Independiente se encuentra en la calle Avenida San Martín, número 67, entre 1 y 103. </p>
+            </div>
+        </div>
+
+        <div id="Contacto" class="section">
+            <h2>✅ Contacto</h2>
+            <div class="text-container">
+                <p>Teléfono: 02302-435414.</p>
+                <a href="https://www.instagram.com/csindependiente.ok/" target="_blank">Instagram de Independiente.</a>
+            </div>
+        </div>
+        </div>
+
+    </div>
+    </div>
+
+    <script src="js/script.js"></script>
     <script src="js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
