--- a/independiente.html
+++ b/independiente.html
@@ -60,7 +60,7 @@
                         Petit de Meurville, acuñando el lema "Mens sana in 
                         corpore sano" que continúa siendo el eje inspirador 
                         del club hasta la actualidad, en el cual se desarrollan 
-                        distintas disciplinas como fútbol, balonmano, tenis, golf, entre otras.[</p>
+                        distintas disciplinas como fútbol, balonmano, tenis, golf, entre otras.</p>
                 </div>
             </div>
 
