--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
             <div class="col-md-4 mb-4 d-flex justify-content-center">
                 <div class="card" style="width: 18rem;">
-                    <img src="recursos/independiente.png" class="card-img-top" alt="escudo independiente">
+                    <img src="recursos/logo-independiente.png" class="card-img-top" alt="escudo independiente">
                     <div class="card-body">
                         <h5 class="card-title">Club Sportivo Independiente</h5>
                         <p class="card-text">Club deportivo que reúne a atletas y vecinos en torno a distintas disciplinas, promoviendo valores de trabajo en equipo</p>
@@ -61,7 +61,7 @@
                     <div class="card-body">
                         <h5 class="card-title">Club Atlético y Cultural Argentino</h5>
                         <p class="card-text">Club comprometido con el deporte social y competitivo, brindando oportunidades de aprendizaje, entrenamiento y participación para todos</p>
-                        <a href="atletico.html" target="_blank" class="btn btn-success">Ir a Átletico Argentino</a>
+                        <a href="atletico.html" class="btn btn-success">Ir a Átletico Argentino</a>
                     </div>
                 </div>
             </div>
