--- a/pfc.html
+++ b/pfc.html
@@ -104,23 +104,16 @@
             <div id="Ubicación" class="section">
             <h2>Ubicación</h2>
             <div class="text-container">
-                <p>El 1 de abril de 1919, un grupo de jóvenes entusiastas del deporte y con un fuerte sentido de
-                    comunidad fundó Pico Football Club en la ciudad de General Pico, La Pampa. La institución nació
-                    con el propósito de fomentar la práctica del fútbol y generar un espacio de encuentro y
-                    crecimiento para la comunidad. Entre sus impulsores se destacaron Mario Rudoni, Eduardo Rolero,
-                    Gabriel Pedrerol y otros visionarios que sentaron las bases de lo que con el tiempo se
-                    convertiría en una institución emblema de la región.</p>
+                <p>Pico Football Club se encuentre en la calle Avenida San Martín, número 147 entre 3 y 5.</p>
             </div>
         </div>
 
         <div id="Contacto" class="section">
             <h2>✅ Contacto</h2>
             <div class="text-container">
-                <p>Has completado la guía exitosamente. Ahora tienes:</p>
-                <p>• Conocimientos sólidos de los fundamentos</p>
-                <p>• Un entorno de desarrollo configurado</p>
-                <p>• Ubicación para reference</p>
-                <p>¡Felicidades! 🎉 Continúa practicando y explorando nuevas tecnologías.</p>
+                <p>Teléfono: 02302 33-6388.
+                <a href="https://www.instagram.com/picofootballclub/" target="_blank">Instagram de Pico Football Club.</a>
+                </p>
             </div>
         </div>
         </div>
