--- a/atletico.html
+++ b/atletico.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Club Atlético y Cultural</title>
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/estiloClubes.css">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
@@ -18,18 +18,9 @@
         }
     </style>-->
 </head>
-<body style="margin: 0; padding: 0;">
-    <header class="bg-dark text-light" style="width: 100%; height: 100px;">
-        <div class="container-fluid">
-            <div class="row" style="height: 100px;">
-                <div class="col-4" style="height: 100px;">
-                    <a href="index.html"><img src="recursos/LogoGP.png" alt="LogoGralPico" style="height: 100%;"></a>
-                </div>
-                <div class="col-8 d-flex align-items-center" style="height: 100px;">
-                    <h1 style=" color: white;">Atlético General Pico</h1>
-                </div>
-            </div>
-        </div>
+<body  class="fondo-atletico" style="margin: 0; padding: 0;">
+    <header>
+        <a href="index.html"><img src="recursos/LogoGP.png" alt="LogoGralPico" class="logo" style="color: black;"></a>
     </header>
     <div class="container-fluid">
         <!-- Tabla de Contenidos -->
@@ -57,7 +48,7 @@
             </div>
             <div class="col-md-9 content" style="margin-top: 100px;">
             <!-- ...contenido principal... -->
-                <div class="content" style="text-align: center;">aaaaaaaaaaaaaaaaaaaaaaaaaaaa
+                <div class="content" style="text-align: center;">
                     <div id="Introducción" class="section active">
                         <h2>Presentación</h2>
                         <div class="text-container">
@@ -70,8 +61,18 @@
 
                     <div id="Historia" class="section">
                         <h2>Historia</h2>
-                        <div class="text-container">
+                        <div class="text-container" style="text-align:left;">
                             <p>
+                                Fundado el 1 de agosto de 1920, hace 105 años, nuestro querido club nació bajo el nombre de Foot Ball Club Argentino. Con el tiempo, se consolidó como una de las instituciones más antiguas de la región.
+                                Unos años después, el 25 de junio de 1925, los socios decidieron cambiar el nombre a Club Atlético y Cultural Argentino, un nombre que llevamos con orgullo hasta el día de hoy. Hitos en Nuestra Infraestructura
+                                Desde sus inicios, el club no paró de crecer:
+                                <ul>
+                                <li>Década de 1920: Se construyó la primera cancha de fútbol bajo la presidencia de Amadeo Fava.</li>
+                                <li>Década de 1930: Con una visión de futuro, se inauguró nuestra piscina el 3 de febrero de 1935 y, poco después, las canchas de pelota a paleta, una cantina y la cancha de básquet al aire libre.</li>
+                                <li>Décadas de 1950 y 1960: Se inauguraron la sede social, el salón comedor y el icónico "Palacio Azul", nuestra cancha de básquet.</li>
+                                <li>Década de 1990: Se agregaron canchas de pádel, fútbol 5, squash y la confitería, consolidando la variedad de deportes que ofrecemos.</li>
+                                <li>Año 2000: Se inauguró la escuela y pista de atletismo, reforzando nuestro compromiso con el desarrollo deportivo.</li>
+                                </ul>
                             </p>
                         </div>
                     </div>
