--- a/ferro.html
+++ b/ferro.html
@@ -106,14 +106,17 @@
             <h2>Ubicación</h2>
             <div class="text-container">
                 <p>Ferro se encuentra en la calle 17 y 102 (o 17 y 104). </p>
+                <div class= "contenedor-mapa">
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3241.332464328049!2d-63.76574562426291!3d-35.66881491452641!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95c37d4e8697df57%3A0xbd4268aa680b76ad!2sClub%20Ferro%20Carril%20Oeste!5e0!3m2!1ses-419!2sar!4v1756419434829!5m2!1ses-419!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                </div> 
             </div>
         </div>
 
         <div id="Contacto" class="section">
-            <h2>✅ Contacto</h2>
+            <h2>Contacto</h2>
             <div class="text-container">
                 <p>Teléfono: 02302-436-072.</p>
-                <a href="https://www.instagram.com/ferrodelapampa/" target="_blank">Instagram de ferro.</a>
+                <p><a href="https://www.instagram.com/ferrodelapampa/" target="_blank">Instagram de ferro.</a></p>
             </div>
         </div>
         </div>
