--- a/independiente.html
+++ b/independiente.html
@@ -107,14 +107,17 @@
             <h2>Ubicación</h2>
             <div class="text-container">
                 <p>Independiente se encuentra en la calle Avenida San Martín, número 67, entre 1 y 103. </p>
+                <div class= "contenedor-mapa">
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d3241.865701462769!2d-63.765244474263575!3d-35.65568031381374!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!2m1!1sindependiente%20pico!5e0!3m2!1ses-419!2sar!4v1756418897959!5m2!1ses-419!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                </div>
             </div>
         </div>
 
         <div id="Contacto" class="section">
-            <h2>✅ Contacto</h2>
+            <h2>Contacto</h2>
             <div class="text-container">
                 <p>Teléfono: 02302-435414.</p>
-                <a href="https://www.instagram.com/csindependiente.ok/" target="_blank">Instagram de Independiente.</a>
+                <p><a href="https://www.instagram.com/csindependiente.ok/" target="_blank">Instagram de Independiente.</a></p>
             </div>
         </div>
         </div>
