--- a/pfc.html
+++ b/pfc.html
@@ -105,15 +105,18 @@
             <h2>Ubicación</h2>
             <div class="text-container">
                 <p>Pico Football Club se encuentre en la calle Avenida San Martín, número 147 entre 3 y 5.</p>
+                <div class= "contenedor-mapa">
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3241.803197495509!2d-63.76217495052518!3d-35.657220117365995!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95c37d57b3674337%3A0x9f67b27d9df9f8!2sClub%20Pico%20Foot%20Ball!5e0!3m2!1ses-419!2sar!4v1756419369204!5m2!1ses-419!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                </div>    
             </div>
+            
         </div>
 
         <div id="Contacto" class="section">
-            <h2>✅ Contacto</h2>
+            <h2>Contacto</h2>
             <div class="text-container">
-                <p>Teléfono: 02302 33-6388.
-                <a href="https://www.instagram.com/picofootballclub/" target="_blank">Instagram de Pico Football Club.</a>
-                </p>
+                <p>Teléfono: 02302 33-6388.</p>
+                <p><a href="https://www.instagram.com/picofootballclub/" target="_blank">Instagram de Pico Football Club.</a></p>
             </div>
         </div>
         </div>
