--- a/atletico.html
+++ b/atletico.html
@@ -117,10 +117,13 @@
                         <div class="text-container">
                             <p> General Pico</p>
                             <p>Calle 32 Nº 750 - (6360) General Pico.</p>
+                            <div class= "contenedor-mapa">
+                                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3241.8715535438077!2d-63.75162901668769!3d-35.65553614312904!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95c37d5e24f51bcd%3A0xd0e92340a7629dde!2sClub%20Atl%C3%A9tico%20y%20Cultural%20Argentino!5e0!3m2!1ses-419!2sar!4v1756419483932!5m2!1ses-419!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                            </div>
                         </div>
                     </div>
                     <div id="Contacto" class="section">
-                        <h2>✅ Contacto</h2>
+                        <h2>Contacto</h2>
                         <div class="text-container">
                             <p>Teléfono:</p>
                             <p>12356465564</p>
