--- a/costa.html
+++ b/costa.html
@@ -111,14 +111,17 @@
             <h2>Ubicación</h2>
             <div class="text-container">
                 <p>Calle 23 número 1051, Gral. Pico, La Pampa.</p>
+                <div class= "contenedor-mapa">
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3241.580335676205!2d-63.75108512426306!3d-35.66270991419517!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95c37d5d2af1391b%3A0x4c10abf74beadb15!2sClub%20Atletico%20Costa%20Brava!5e0!3m2!1ses-419!2sar!4v1756419466773!5m2!1ses-419!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                </div>
             </div>
         </div>
 
         <div id="Contacto" class="section">
-            <h2>✅ Contacto</h2>
+            <h2>Contacto</h2>
             <div class="text-container">
                 <p>Teléfono: 02302 42-2744</p>
-                <a href="https://www.instagram.com/clubatleticocostabrava/" target="_blank">Instagram de Costa Brava.</a>
+                <p><a href="https://www.instagram.com/clubatleticocostabrava/" target="_blank">Instagram de Costa Brava.</a></p>
             </div>
         </div>
         </div>
