Agregué una presentación

--- a/atletico.html
+++ b/atletico.html
@@ -52,7 +52,7 @@
                     <div id="Introducción" class="section active">
                         <h2>Presentación</h2>
                         <div class="text-container">
-                            <p>:o</p>
+                            <p>El Club Atlético y Cultural Argentino es una institución deportiva y social con sede en General Pico, La Pampa, Argentina.cuenta con diversas instalaciones para sus actividades como estadio de fútbol, sede de los partidos de local, gimnasio cubierto para básquetbol, voley y otras disciplinas bajo techo, canchas de tenis y pádel y pileta de natación.</p>
                         </div>
                         <div class="section-img" style="text-align: center;">
                             <img src="recursos/Club-Atlético-y-Cultural-Argentino-de-General-Pico.jpg" class="img" style="width: 100%;">
