--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
                     <div class="col-md-4 mb-3">
                         <h5>Contacto</h5>
                         <ul class="list-unstyled">
-                            <li>Email: ChinoUra80@gmail.com</li>
+                            <li>Email: clubesPico@gmail.com</li>
                             <li>Tel: +54 9 295460-8171</li>
                             <li>Dirección: Av. Siempre Viva 742</li>
                         </ul>
