Footer y poco más

--- a/atletico.html
+++ b/atletico.html
@@ -52,7 +52,7 @@
                     <div id="Introducción" class="section active">
                         <h2>Presentación</h2>
                         <div class="text-container">
-                            <p>:o</p>
+                            <p>Somos un club de puertas abiertas, donde la amistad, el respeto y el esfuerzo son los valores que guían nuestra pasión por el deporte. Somos el corazón del barrio Pacífico y parte fundamental de General Pico.</p>
                         </div>
                         <div class="section-img" style="text-align: center;">
                             <img src="recursos/Club-Atlético-y-Cultural-Argentino-de-General-Pico.jpg" class="img" style="width: 100%;">
@@ -92,24 +92,17 @@
                                 </div>
                                 <p class="sport-caption">Fútbol</p>
                             </div>
-
                             <div class="sport-item">
                                 <div class="image-container">
-                                    <img src="recursos/Natacion.jpg" alt="Natación">
+                                    <img src="recursos/Cestoball.avif" alt="Cestoball">
                                 </div>
-                                <p class="sport-caption">Natación</p>
+                                <p class="sport-caption">Cestoball</p>
                             </div>
                             <div class="sport-item">
                                 <div class="image-container">
-                                    <img src="recursos/Voley.webp" alt="Vóley">
+                                    <img src="recursos/Pelota a paleta.webp" alt="PelotaPaleta">
                                 </div>
-                                <p class="sport-caption">Vóley</p>
-                            </div>
-                            <div class="sport-item">
-                                <div class="image-container">
-                                    <img src="recursos/Hockey.jpg" alt="Hockey">
-                                </div>
-                                <p class="sport-caption">Hockey</p>
+                                <p class="sport-caption">Pelota a paleta</p>
                             </div>
                         </div>
                     </div>
