--- a/pfc.html
+++ b/pfc.html
@@ -102,27 +102,80 @@
                 </div>
             </div>
             <div id="Ubicación" class="section">
-            <h2>Ubicación</h2>
-            <div class="text-container">
-                <p>Pico Football Club se encuentre en la calle Avenida San Martín, número 147 entre 3 y 5.</p>
-                <div class= "contenedor-mapa">
-                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3241.803197495509!2d-63.76217495052518!3d-35.657220117365995!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95c37d57b3674337%3A0x9f67b27d9df9f8!2sClub%20Pico%20Foot%20Ball!5e0!3m2!1ses-419!2sar!4v1756419369204!5m2!1ses-419!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-                </div>    
-            </div>
-            
-        </div>
+                <h2>Ubicación</h2>
+                <div class="text-container">
+                    <p>Pico Football Club se encuentre en la calle Avenida San Martín, número 147 entre 3 y 5.</p>
+                    <div class="contenedor-mapa">
+                        <iframe
+                            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3241.803197495509!2d-63.76217495052518!3d-35.657220117365995!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95c37d57b3674337%3A0x9f67b27d9df9f8!2sClub%20Pico%20Foot%20Ball!5e0!3m2!1ses-419!2sar!4v1756419369204!5m2!1ses-419!2sar"
+                            width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+                            referrerpolicy="no-referrer-when-downgrade"></iframe>
+                    </div>
+                </div>
 
-        <div id="Contacto" class="section">
-            <h2>Contacto</h2>
-            <div class="text-container">
-                <p>Teléfono: 02302 33-6388.</p>
-                <p><a href="https://www.instagram.com/picofootballclub/" target="_blank">Instagram de Pico Football Club.</a></p>
             </div>
-        </div>
+
+            <div id="Contacto" class="section">
+                <h2>Contacto</h2>
+                <div class="text-container">
+                    <p>Teléfono: 02302 33-6388.</p>
+                    <p><a href="https://www.instagram.com/picofootballclub/" target="_blank">Instagram de Pico Football
+                            Club.</a></p>
+                </div>
+            </div>
         </div>
 
     </div>
-    </div>
+    <footer class="bg-dark text-light pt-4 mt-5">
+        <div class="container-fluid">
+            <div class="row">
+                <!-- Columna 1: Contacto -->
+                <div class="col-md-4 mb-3">
+                    <h5>Contacto</h5>
+                    <ul class="list-unstyled">
+                        <li>Email: RusoOpa80@gmail.com</li>
+                        <li>Tel: +54 9 2923 65-7150</li>
+                        <li>Dirección: Av. Nunca Viva 742</li>
+                    </ul>
+                </div>
+
+                <!-- Columna 2: Enlaces -->
+                <div class="col-md-4 mb-3">
+                    <h5>Enlaces útiles</h5>
+                    <ul class="list-unstyled">
+                        <li><a href="#" class="text-light text-decoration-none">Inicio</a></li>
+                        <li><a href="#" class="text-light text-decoration-none">Sobre nosotros</a></li>
+                        <li><a href="#" class="text-light text-decoration-none">Servicios</a></li>
+                        <li><a href="#" class="text-light text-decoration-none">Contacto</a></li>
+                    </ul>
+                </div>
+
+                <!-- Columna 3: Redes -->
+                <div class="col-md-4 mb-3">
+                    <h5>Redes sociales</h5>
+                    <ul class="list-unstyled">
+                        <li>
+                            <img src="recursos/facebook.svg" alt="Facebook" width="16" height="16" class="me-2">
+                            <a href="#" class="text-light text-decoration-none">Facebook</a>
+                        </li>
+                        <li>
+                            <img src="recursos/whatsapp.svg" alt="whatsapp" width="16" height="16" class="me-2">
+                            <a href="#" class="text-light text-decoration-none">Whatsapp</a>
+                        </li>
+                        <li>
+                            <img src="recursos/instagram.svg" alt="Instagram" width="16" height="16" class="me-2">
+                            <a href="#" class="text-light text-decoration-none">Instagram</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+
+            <hr class="border-secondary">
+            <div class="text-center pb-3">
+                <small>&copy; 2025 General Pico Web. Todos los derechos reservados.</small>
+            </div>
+        </div>
+    </footer>
 
     <script src="js/script.js"></script>
 </body>
