--- a/ferro.html
+++ b/ferro.html
@@ -130,8 +130,8 @@
                 <div class="col-md-4 mb-3">
                     <h5>Contacto</h5>
                     <ul class="list-unstyled">
-                        <li>Email: RusoOpa80@gmail.com</li>
-                        <li>Tel: +54 9 2923 65-7150</li>
+                        <li>Email: clubesPico@gmail.com</li>
+                        <li>Tel: +54 9 295460-8171</li>
                         <li>Dirección: Av. Nunca Viva 742</li>
                     </ul>
                 </div>
