--- a/costa.html
+++ b/costa.html
@@ -129,6 +129,57 @@
     </div>
     </div>
 
+    <footer class="bg-dark text-light pt-4 mt-5">
+        <div class="container-fluid">
+            <div class="row">
+                <!-- Columna 1: Contacto -->
+                <div class="col-md-4 mb-3">
+                    <h5>Contacto</h5>
+                    <ul class="list-unstyled">
+                        <li>Email: clubesPico@gmail.com</li>
+                        <li>Tel: +54 9 295460-8171</li>
+                        <li>Dirección: Av. Nunca Viva 742</li>
+                    </ul>
+                </div>
+
+                <!-- Columna 2: Enlaces -->
+                <div class="col-md-4 mb-3">
+                    <h5>Enlaces útiles</h5>
+                    <ul class="list-unstyled">
+                        <li><a href="#" class="text-light text-decoration-none">Inicio</a></li>
+                        <li><a href="#" class="text-light text-decoration-none">Sobre nosotros</a></li>
+                        <li><a href="#" class="text-light text-decoration-none">Servicios</a></li>
+                        <li><a href="#" class="text-light text-decoration-none">Contacto</a></li>
+                    </ul>
+                </div>
+
+                <!-- Columna 3: Redes -->
+                <div class="col-md-4 mb-3">
+                    <h5>Redes sociales</h5>
+                    <ul class="list-unstyled">
+                        <li>
+                            <img src="recursos/facebook.svg" alt="Facebook" width="16" height="16" class="me-2">
+                            <a href="#" class="text-light text-decoration-none">Facebook</a>
+                        </li>
+                        <li>
+                            <img src="recursos/whatsapp.svg" alt="whatsapp" width="16" height="16" class="me-2">
+                            <a href="#" class="text-light text-decoration-none">Whatsapp</a>
+                        </li>
+                        <li>
+                            <img src="recursos/instagram.svg" alt="Instagram" width="16" height="16" class="me-2">
+                            <a href="#" class="text-light text-decoration-none">Instagram</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+
+            <hr class="border-secondary">
+            <div class="text-center pb-3">
+                <small>&copy; 2025 General Pico Web. Todos los derechos reservados.</small>
+            </div>
+        </div>
+    </footer>
+
     <script src="js/script.js"></script>
     <script src="js/bootstrap.bundle.min.js"></script>
 </body>
