--- a/atletico.html
+++ b/atletico.html
@@ -24,7 +24,7 @@
     </header>
     <div class="container-fluid">
         <!-- Tabla de Contenidos -->
-        <div class="row">  
+        <div class="row px-5">  
             <div class="col-md-3 toc-sidebar">
                  <!-- ...sidebar... -->
                 <div class="toc-item">
@@ -100,7 +100,7 @@
                             </div>
                             <div class="sport-item">
                                 <div class="image-container">
-                                    <img src="recursos/Pelota a paleta.webp" alt="PelotaPaleta">
+                                    <img src="recursos/Pelotaapaleta.webp" alt="PelotaPaleta">
                                 </div>
                                 <p class="sport-caption">Pelota a paleta</p>
                             </div>
